Farbe wie bei Internal Frame (für inaktive Frames)
wg. https://github.com/homebeaver/SwingSet/issues/25

Das is zwar möglich, aber Internal Frames verwenden zwei Farben:
- für inaktive Frames
- für aktive Frames (Gradient)
siehe MetalInternalFrameTitlePane

Diese Funktionalität ist in der (hidden) Klasse MetalTitlePane gar nicht
implementiert